# NeuronAI

./: .gitignore  AGENTS.md  README.md  TODO.md  install.sh
.github/workflows/: ci.yml
backend/go/: go.mod  go.sum
backend/go/cmd/gateway/: main.go
backend/go/internal/api/: handler.go  handler_test.go
backend/go/internal/config/: config.go
backend/go/internal/grpc/: client.go  client_test.go
backend/go/internal/grpc/pb/: neuronai.pb.go  neuronai_grpc.pb.go
backend/go/internal/middleware/: auth.go  auth_test.go
backend/go/internal/websocket/: hub.go
backend/python/: main.py  pyproject.toml  pytest.ini
backend/python/src/neuronai/: __init__.py
backend/python/src/neuronai/agents/: llm_service.py  orchestrator.py  prompt_templates.py
backend/python/src/neuronai/api/: auth.py
backend/python/src/neuronai/config/: settings.py
backend/python/src/neuronai/grpc/: neuronai_pb2.py  neuronai_pb2_grpc.py  server.py
backend/python/src/neuronai/models/: database.py
backend/python/tests/: test_orchestrator.py  test_server.py
docs/: ADRs.md  README.md  api.md  architecture.md  backend.md  deployment.md  development.md  frontend.md  protobuf.md
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/lib/models/: message_model.dart
frontend/lib/providers/: auth_provider.dart  chat_provider.dart  settings_provider.dart
frontend/lib/screens/: chat_screen.dart  login_screen.dart  password_reset_screen.dart  settings_screen.dart  signup_screen.dart
frontend/lib/services/: api_service.dart  websocket_service.dart
frontend/lib/widgets/: chat_input.dart  message_bubble.dart
frontend/test/providers/: auth_provider_test.dart  chat_provider_test.dart
infra/docker/: .env.example  Dockerfile.go  Dockerfile.python  SELFHOSTING.md  docker-compose.selfhosted.yml  docker-compose.yml
infra/docker/init-scripts/: 01-schema.sql
infra/docker/nginx/: nginx.conf
infra/docker/scripts/: backup.sh  deploy.sh  update.sh
proto/: neuronai.proto
